# sara-rain-drop-detector

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  catalog-info.yaml  main.py  pyproject.toml
.github/workflows/: deploy_to_development.yml  deploy_to_staging.yml  promote_to_production.yml  test_and_lint.yml
sara_rain_drop_detector/: blob.py  cli_inputs.py  inference.py  main_rain_drop_detector.py
sara_rain_drop_detector/config/: logger.py  open_telemetry.py  settings.py
sara_rain_drop_detector/models/: blob_storage_location.py
tests/: test_blob_storage_location.py  test_cli_inputs.py  test_inference.py  test_main_rain_drop_detector.py
