[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sara-rain-drop-detector"
version = "0.1.0"
description = "Sara Rain Drop Detector"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
requires-python = ">=3.14"
dependencies = [
    "python-dotenv",
    "Pillow",
    "numpy",
    "azure-storage-blob",
    "pydantic",
    "pydantic-settings",
    "typer",
    "ultralytics",
    "torch",
    "torchvision",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "black",
    "isort",
    "flake8",
    "types-requests",
    "pip-system-certs",
    "pip-tools",
]

[tool.setuptools.packages.find]
include = ["sara_rain_drop_detector*"]

[tool.uv]
native-tls = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]
torchvision = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
pythonpath = [
  "."
]
testpaths = [
    "tests",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
no_warn_return_any = true
warn_unused_ignores = false
strict_optional = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
explicit_package_bases = true
namespace_packages = true
files = ["sara_rain_drop_detector", "main.py"]

[tool.isort]
profile = "black"
